5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4126/executions/1575_1331.log
== TEST (2019-03-12 20:03:07) 
-- CODE:
print(50/3)
print(%2)
-- ERROR:
File "XXXX", line 2
    print(%2)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 20:03:34) 
-- CODE:
print(50/3)
print(2%)
-- ERROR:
File "XXXX", line 2
    print(2%)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 20:04:32) 
-- CODE:
print(50/3)
print(50 % 3)
-- OUTPUT:
16.666666666666668
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 20:04:36) 
-- CODE:
print(50/3)
print(50 % 3)
-- EXECUTION TIME:
0.21031
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16.666666666666668
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 20:05:42) 
-- CODE:
print(50 / 3)
print(50 % 3)
-- EXECUTION TIME:
0.11385
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16.666666666666668
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 20:08:33) 
-- CODE:
print(50/3)

-- OUTPUT:
16.666666666666668
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 20:09:02) 
-- CODE:
print(50/3)
print(50%3)
-- OUTPUT:
16.666666666666668
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 20:09:08) 
-- CODE:
print(50/3)
print(50%3)
-- EXECUTION TIME:
0.198499
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16.666666666666668
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 20:09:27) 
-- CODE:
print(50 / 3)
print(50 % 3)
-- OUTPUT:
16.666666666666668
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 20:09:34) 
-- CODE:
print(50 / 3)
print(50 % 3)
-- EXECUTION TIME:
0.122186
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16.666666666666668
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 20:10:05) 
-- CODE:
print(50/3)
print(50 % 3)
-- EXECUTION TIME:
0.220949
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16.666666666666668
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 20:11:23) 
-- CODE:
print(50/3)
print(50 % 3)
-- OUTPUT:
16.666666666666668
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 20:11:55) 
-- CODE:
print(50/3,2)
print(50 % 3)
-- OUTPUT:
16.666666666666668 2
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 20:11:59) 
-- CODE:
print(50/3,2)
print(50 % 3)
-- EXECUTION TIME:
0.13662
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16.666666666666668 2
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 20:12:24) 
-- CODE:
print(50//3)
print(50 % 3)
-- OUTPUT:
16
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 20:12:27) 
-- CODE:
print(50//3)
print(50 % 3)
-- EXECUTION TIME:
0.178506
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
